--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 
 [dependencies]
 futures = "^0.1.17"
-tokio = "*"
+tokio-core = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+
+[features]
+robtop-types = []
+robtop-names = []
