--- a/gdrs/Cargo.toml
+++ b/gdrs/Cargo.toml
@@ -3,4 +3,11 @@ name = "gdrs"
 version = "0.1.0"
 
 [dependencies]
-gdcf = { path = "../gdcf" }
+futures = "^0.1.17"
+tokio-core = "0.1"
+hyper = "^0.11.25"
+serde_urlencoded = "0.5.1"
+
+[dependencies.gdcf]
+path = "../gdcf"
+features = ["robtop-names", "robtop-types"]
