--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -7,6 +7,7 @@ futures = "^0.1.17"
 tokio-core = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
+gdcf_derive = { path = "../gdcf_derive" }
 
 [features]
 gj-format = []
