--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -8,6 +8,7 @@ tokio-core = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
 gdcf_derive = { path = "../gdcf_derive" }
+lazy_static = "1.0"
 
 [features]
 gj-format = []
