Removed request serialization from gdcf core and instead implemented it using serde remotes in gdrs

--- a/gdrs/Cargo.toml
+++ b/gdrs/Cargo.toml
@@ -7,6 +7,8 @@ futures = "^0.1.17"
 tokio-core = "0.1"
 hyper = "^0.11.25"
 serde_urlencoded = "0.5.1"
+serde = "^1.0"
+serde_derive = "^1.0"
 
 [dependencies.gdcf]
 path = "../gdcf"
