--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -5,10 +5,13 @@ version = "0.1.0"
 [dependencies]
 futures = "^0.1.17"
 tokio-core = "0.1"
-serde = "1.0"
-serde_derive = "1.0"
+serde = {version = "1.0", optional = true}
+serde_derive = {version = "1.0", optional = true}
 gdcf_derive = { path = "../gdcf_derive" }
 lazy_static = "1.0"
 
 [features]
-gj-format = []
+ser = [
+    "serde",
+    "serde_derive"
+]
