The start of a database cache. Only the postgres part works properly so far though

--- a/gdrs/Cargo.toml
+++ b/gdrs/Cargo.toml
@@ -9,4 +9,6 @@ hyper = "^0.11.25"
 serde_urlencoded = "0.5.1"
 serde = "^1.0"
 serde_derive = "^1.0"
-gdcf = {path = "../gdcf"}
+
+[dependencies.gdcf]
+path = "../gdcf"
