--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,19 @@ name = "gd_caching_framework"
 version = "0.1.0"
 
 [dependencies]
-gdrs = { path = "gdrs" }
-gdcf_postgres = { path = "gdcf_postgres" }
-gdcf = { path = "gdcf" }
 futures = "^0.1.17"
 tokio-core = "0.1"
 hyper = "^0.11.25"
 serde_urlencoded = "0.5.1"
 serde_json = "^1.0"
+
+[dependencies.gdcf]
+path = "gdcf"
+
+[dependencies.gdrs]
+path = "gdrs"
+
+[dependencies.gdcf_dbcache]
+path = "gdcf_dbcache"
 
 [workspace]
