--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ tokio-core = "0.1"
 hyper = "^0.11.25"
 serde_urlencoded = "0.5.1"
 serde_json = "^1.0"
+chrono = "^0.4.0"
 
 [dependencies.gdcf]
 path = "gdcf"
