--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -9,6 +9,7 @@ serde = {version = "1.0", optional = true}
 serde_derive = {version = "1.0", optional = true}
 gdcf_derive = { path = "../gdcf_derive" }
 lazy_static = "1.0"
+chrono = "^0.4.0"
 
 [features]
 ser = [
