--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,12 @@ hyper = "^0.11.25"
 serde_urlencoded = "0.5.1"
 serde_json = "^1.0"
 chrono = "^0.4.0"
+log = "^0.4.0"
+env_logger = "^0.5.9"
 
 [dependencies.gdcf]
 path = "gdcf"
+features = ["ensure_cache_integrity"]
 
 [dependencies.gdrs]
 path = "gdrs"
