--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -10,9 +10,11 @@ serde_derive = {version = "1.0", optional = true}
 gdcf_derive = { path = "../gdcf_derive" }
 lazy_static = "1.0"
 chrono = "^0.4.0"
+log = "^0.4.0"
 
 [features]
 ser = [
     "serde",
     "serde_derive"
 ]
+ensure_cache_integrity = []
