--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -2,6 +2,9 @@
 name = "gdcf_dbcache"
 version = "0.1.0"
 
+[dependencies]
+chrono = "^0.4.0"
+
 [dependencies.rusqlite]
 version = "^0.13.0"
 optional = true
@@ -9,6 +12,7 @@ optional = true
 [dependencies.postgres]
 version = "^0.15.2"
 optional = true
+features = ["with-chrono"]
 
 [dependencies.gdcf]
 path = "../gdcf"
