Conversions for Sqlite

--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -24,7 +24,7 @@ path = "../gdcf"
 path = "../pm_gdcf_dbcache"
 
 [features]
-default = ["pg"]
+default = ["pg", "sqlite"]
 
 pg = ["postgres"]
 mysql = []
