Finalized Sqlite support (at least I think) Its untested yet though!

--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -24,7 +24,7 @@ path = "../gdcf"
 path = "../pm_gdcf_dbcache"
 
 [features]
-default = ["pg", "sqlite"]
+default = ["sqlite"]
 
 pg = ["postgres"]
 mysql = []
