Changed the RawSql stuff to NowAtUtc, fixed the SQLite sql default expression for NowAtUtc to use the datetime format chrono expects

--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -11,6 +11,7 @@ joinery = "1.0.0"
 [dependencies.rusqlite]
 version = "^0.13.0"
 optional = true
+features = ["bundled"]
 
 [dependencies.postgres]
 version = "^0.15.2"
