--- a/gdrs/Cargo.toml
+++ b/gdrs/Cargo.toml
@@ -9,6 +9,7 @@ serde_urlencoded = "0.5.1"
 serde = "^1.0"
 serde_derive = "^1.0"
 log = "^0.4.0"
+tokio-retry = "^0.2.0"
 
 [dependencies.gdcf]
 path = "../gdcf"
