--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -13,6 +13,8 @@ log = "^0.4.0"
 percent-encoding = "^1.0.1"
 base64 = "^0.6.0"
 joinery = "^1.0.0"
+failure = "0.1.2"
+failure_derive = "0.1.2"
 
 [features]
 deser = [
