--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -6,6 +6,8 @@ version = "0.1.0"
 log = "^0.4.0"
 seahash = "^3.0.5"
 joinery = "1.0.0"
+failure = "0.1.2"
+failure_derive = "0.1.2"
 
 [dependencies.rusqlite]
 version = "^0.13.0"
