Switch GDCF to use the new gdcf_parse crate for response processing!

--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -35,7 +35,7 @@ path = "../gdcf"
 path = "../pm_gdcf_dbcache"
 
 [features]
-default = []
+default = ["pg"]
 
 pg = ["postgres", "r2d2_postgres"]
 mysql = []
