--- a/gdcf_parse/Cargo.toml
+++ b/gdcf_parse/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 flate2 = "1.0.6"
+base64 = "0.10.1"
+percent-encoding = "1.0.1"
 
 [dependencies.gdcf]
 path = "../gdcf"
