Cleaned up the code a bit, added logging, made parser work with non-integer indices, use a parser for level metadata

--- a/gdcf_parse/Cargo.toml
+++ b/gdcf_parse/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 flate2 = "1.0.6"
 base64 = "0.10.1"
 percent-encoding = "1.0.1"
+log = "0.4.6"
 
 [dependencies.gdcf]
 path = "../gdcf"
