--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 futures = "^0.1.17"
 serde = {version = "1.0", optional = true}
 serde_derive = {version = "1.0", optional = true}
+base64 = {version = "0.10.1", optional = true}
 chrono = "^0.4.0"
 log = "^0.4.0"
 failure = "0.1.2"
@@ -14,5 +15,6 @@ failure_derive = "0.1.2"
 [features]
 serde_support = [
     "serde",
-    "serde_derive"
+    "serde_derive",
+    "base64"
 ]
