--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -15,6 +15,8 @@ failure_derive = "0.1.2"
 [features]
 serde_support = [
     "serde",
-    "serde_derive",
-    "base64"
+    "serde_derive"
+]
+serialize_level_data = [
+    "serde_support", "base64"
 ]
