Added support for parallel level data parsing using rayon
its so fast omg

--- a/gdcf_parse/Cargo.toml
+++ b/gdcf_parse/Cargo.toml
@@ -9,5 +9,12 @@ base64 = "0.10.1"
 percent-encoding = "1.0.1"
 log = "0.4.6"
 
+[dependencies.rayon]
+version = "1.0.3"
+optional = true
+
 [dependencies.gdcf_model]
 path = "../gdcf_model"
+
+[features]
+parallel = ["rayon"]
