--- a/gdcf_dbcache/Cargo.toml
+++ b/gdcf_dbcache/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "gdcf_dbcache"
 version = "0.1.0"
+edition = "2018"
 
 [dependencies]
 log = "^0.4.0"
@@ -9,6 +10,7 @@ joinery = "1.0.0"
 failure = "0.1.2"
 failure_derive = "0.1.2"
 r2d2 = "0.8.3"
+chrono = "0.4.6"
 
 [dependencies.postgres]
 version = "^0.15.2"
