Level handling. Its ugly but that's the way of diesel and database code in general

--- a/gdcf_diesel/Cargo.toml
+++ b/gdcf_diesel/Cargo.toml
@@ -10,6 +10,7 @@ diesel_migrations = "1.4.0"
 r2d2 = "0.8.3"
 gdcf = { path = "../gdcf" }
 failure = "0.1.5"
+log = "0.4.6"
 
 [dependencies.diesel]
 version = "1.4.1"
