Got gdcf_diesel to work again by updating to the new Cache interface

--- a/gdcf/Cargo.toml
+++ b/gdcf/Cargo.toml
@@ -9,6 +9,7 @@ chrono = "^0.4.0"
 log = "^0.4.0"
 failure = "0.1.2"
 failure_derive = "0.1.2"
+derive_more = "*"
 
 [dependencies.gdcf_model]
 path = "../gdcf_model"
